tools/downloads-parity-v1/downloads-contract-fixture-v2-report-20260609-182517.txt
=== DOWNLOADS CONTRACT FIXTURE V2 REPORT ===
DATE=2026-06-09 18:25:17
WORK_BRANCH=haskell-downloads-contract-fixture-20260609-182029
MASTER_LEFT_AT=0f9bec0dd6c87fab550968fea1bb9507c98e59cd
HEAD=7836c2b92a933d434aacbf19ae01c01481971235
MASTER_NOT_TOUCHED=YES


============================================================
RUN: build downloads fixture v2
CMD: node tools\downloads-parity-v1\build-downloads-fixture.js
============================================================
C:\Users\Mac Mini\Desktop\Website Host\Streaming_Website\streamvault\tools\downloads-parity-v1\build-downloads-fixture.js:43
return path.relative(root, file).replace(/\/g, "/");
                                         ^^^^^^^^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12)
    at node:internal/main/run_main_module:28:49

Node.js v20.20.2
EXIT_CODE=1
